--- a/application/templates/home/layout.html
+++ b/application/templates/home/layout.html
@@ -89,8 +89,8 @@
         </div>
     </footer>
 
-    <script src="{{ url_for('static',filename='base/js/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='base/js/bootstrap.min.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 
 
