--- a/application/templates/home/play.html
+++ b/application/templates/home/play.html
@@ -1,10 +1,8 @@
 {% extends "home/home.html" %} {% block css %}
 <!--playing page-->
-<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='jwplayer/skins/stormtrooper.css') }}">
 <script type="text/javascript" charset="UTF-8" src="{{url_for('static',filename='ue/ueditor.config.js')}}"></script>
 <script type="text/javascript" charset="UTF-8" src="{{url_for('static',filename='ue/ueditor.all.min.js')}}"></script>
-<script type="text/javascript" charset="UTF-8" src="{{url_for('static',filename='ue/lang/en/en.js')}}"></script> 
-
+<script type="text/javascript" charset="UTF-8" src="{{url_for('static',filename='ue/lang/en/en.js')}}"></script>
 
 <script>
     SyntaxHighlighter.all();
@@ -12,9 +10,7 @@
 <!--playing page-->
 
 
-{% endblock %} 
-
-{% block content %}
+{% endblock %} {% block content %}
 <div class="row">
     <div class="col-md-8">
         <div id="moviecontainer"></div>
@@ -78,10 +74,24 @@
                             {{ movie.info }}
                         </td>
                     </tr>
+
                 </table>
+                <link href="https://vjs.zencdn.net/7.0.3/video-js.css" rel="stylesheet">
+
+                <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
+                <script src="http://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
+                <video id="my-video" class="video-js" controls preload="auto" width="640" height="250" datasetup="{}">
+                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type='video/mp4'>
+
+                    <p class="vjs-no-js">
+                        To view this video please enable JavaScript, and consider upgrading to a web browser that
+                        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                    </p>
+                </video>
             </div>
         </div>
     </div>
+
     <div class="col-md-12" style="margin-top:6px;">
         <div class="panel panel-danger">
             <div class="panel-heading">
@@ -104,7 +114,12 @@
                     <div class="form-group">
                         <div>
                             <label for="input_content">Content</label>
-                            <textarea id="input_content"></textarea>
+                            <!-- Main Quill library -->
+
+                            <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+                            <script>tinymce.init({ selector: 'textarea' });</script>
+
+                            <textarea>Your comment here...</textarea>
                         </div>
                         <div class="col-xs-12" id="error_content"></div>
                     </div>
@@ -181,48 +196,9 @@
         </div>
     </div>
 </div>
-{% endblock %} {% block js %}
-<!--playing page-->
-<script src="{{ url_for('static',filename='jwplayer/jwplayer.js') }}"></script>
-<script>
-var ue = UE.getEditor('input_content',{
-    toolbars: [
-        ['fullscreen', 'emotion', 'preview', 'link']
-    ],
-    initialFrameWidth:"100%",
-    initialFrameHeight:"100",
-});
 
-</script>
-<script type="text/javascript">
-	jwplayer.key = "P9VTqT/X6TSP4gi/hy1wy23BivBhjdzVjMeOaQ==";
 
-</script>
-<script type="text/javascript">
-	jwplayer("moviecontainer").setup({
-		flashplayer: "{{ url_for('static',filename='jwplayer/jwplayer.flash.swf') }}",
-		playlist: [{
-			file: "{{ url_for('static',filename='uploads/'+movie.url) }}",
-			title: "{{ movie.title }}"
-		}],
-		modes: [{
-			type: "html5"
-		}, {
-			type: "flash",
-			src: "{{ url_for('static',filename='jwplayer/jwplayer.flash.swf') }}"
-		}, {
-			type: "download"
-		}],
-		skin: {
-			name: "vapor"
-		},
-		"playlist.position": "left",
-		"playlist.size": 400,
-		height: 500,
-		width: 774,
-	});
 
-</script>
 
 
 <!--playing page-->
