--- a/application/templates/home/play.html
+++ b/application/templates/home/play.html
@@ -79,8 +79,8 @@
 
                 <audio controls>
 
-                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type="audio/mpeg"> Your browser does not support the audio element.
-                    </audio> 
+                    <source src="{{ url_for('static', filename='uploads/'+movie.url) }}" type="audio/ogg"> Your browser does not support the audio element.
+            </audio> 
             </div>
         </div>
     </div>
